# GameEngine

./: CMakeLists.txt  TODO.txt
examples/: CMakeLists.txt
examples/01/: CMakeLists.txt
examples/01/src/: MyGLRender.cpp  MyGLRender.h  main.cpp
include/GameEngine/: Config.h
include/GameEngine/Common/: Config.h  SmartPtr.h
include/GameEngine/Common/Debug/: Logger.h
include/GameEngine/Window/: BaseImplWindow.h  Config.h  Event.h  Window.h
include/GameEngine/Window/Win32/: Win32Window.h
include/GameEngine/Window/Win32/WGL/: WGLContext.h
include/GameEngine/Window/X/: XWindow.h
src/: CMakeLists.txt
src/Common/: CMakeLists.txt
src/Common/Debug/: Logger.cpp
src/Window/: BaseImplWindow.cpp  CMakeLists.txt  Window.cpp
src/Window/Win32/: Win32Window.cpp
src/Window/Win32/WGL/: WGLContext.cpp
src/Window/X/: XWindow.cpp  XWindow.h
